--- a/views/detail_partie.ejs
+++ b/views/detail_partie.ejs
@@ -25,7 +25,7 @@
 
                     <!-- Gauche-->
                     <div style="background-color: grey; border-radius: 12px; padding-bottom: 4px">
-                        <p><b>Partie cree par :</b> <%= infos.donnee.nomCreateur %></p>
+                        <p><b>Partie cree par :</b> <%= infos.donnee.pseudoCreateur %></p>
                         <button type="button" class="btn-contact">Acceder au profil</button>
 
                         <p><b>Systeme de jeu :</b> <%= infos.donnee.nomSysteme%></p>
@@ -34,7 +34,7 @@
 
                         <p><b>Description</b></p>
                         <div style="background-color: white;  border-radius: 12px; width: 50%">
-                            <p><%= infos.donnee.description%></p>
+                            <p><%= infos.donnee.descriptionPartie%></p>
                         </div>
                         <p>Caracteristique de la partie</p>
                         <div style="background-color: white;  border-radius: 12px; width: 50%">
