--- a/views/detail_partie.ejs
+++ b/views/detail_partie.ejs
@@ -36,7 +36,7 @@
                         <div style="background-color: white;  border-radius: 12px; width: 50%">
                             <p><%= infos.donnee.descriptionPartie%></p>
                         </div>
-                        <p>Caracteristique de la partie</p>
+                        <p><b>Caracteristique de la partie</b></p>
                         <div style="background-color: white;  border-radius: 12px; width: 50%">
                             <ul>
                                 <% infos.donnee.caracteristiques.forEach((carac) =>{ %>
