--- a/views/acceuil.ejs
+++ b/views/acceuil.ejs
@@ -16,9 +16,8 @@
         <!-- Acceuil-->
         <div class="container">
             <div class="row">
-                <div class="col-md-1"> <%- include('navbar.ejs'); %>
-                    
-                </div>
+                
+                <%- include('navbar.ejs'); %>
                 
            
             <!-- Acces au parite en cour-->
