--- a/views/detail_partie.ejs
+++ b/views/detail_partie.ejs
@@ -10,11 +10,11 @@
     <link rel="stylesheet" type="text/css" href="../style.css">
     </head>
     <body>
-        <%- include('navbar.ejs'); %>
-        <h2><%= infos.donnee.nomPartie%></h2>
-
+        
 <div class="container">
     <div class="row">
+            <%- include('navbar.ejs'); %>
+
         <div class="col-xl">
             <div class="row">
                 <div class="col-md">
@@ -52,6 +52,7 @@
 
                 </div>
             </div>
+        </div>
         </div>
     </div>
 </div>
