--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,3 +1,4 @@
+<div class="col-md-1"> 
 <nav id="nav" class="navbar is-dark" role="navigation" aria-label="main navigation">
 
     <%
@@ -53,3 +54,4 @@
     </div>
  
  </nav>
+ </div>
