--- a/views/flux.ejs
+++ b/views/flux.ejs
@@ -1,92 +1,108 @@
 <html lang="fr" >
 <head>
-    <meta charset="utf-8" />
-    <title>Recommandations</title>
+  <meta charset="utf-8" />
+  <title>Recommandations</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="../style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
 
-<div class="container">
+  <div class="container">
     <div class="row">
-        <%- include('navbar.ejs'); %>
-        <div class="col-xl">
+      <%- include('navbar.ejs'); %>
+      <div class="col-xl">
         <!--Navbar lien-->
 
-        
+
         <!-- Gauche-->
         <div>
           <h3> Votre flux </h3>
           <% res.forEach(function(partie){
             %>
-          <div>
+            <div>
 
 
-              <div class="card" style="width: 18rem;">
-                  <div class="card-body">
-                      <h6 class="card-title"><%-partie.donnee.nomPartie %></h5>
-                      <p class="card-text"><%-partie.donnee.nomSysteme %></p>
+              <div class="card">
+                <div class="card-body">
+                  <h6 class="card-title"><%-partie.donnee.nomPartie %></h5>
+                    <p class="card-text"><%-partie.donnee.nomSysteme %></p>
 
 
 
-                      <ul>
-                          <% partie.donnee.caracteristiques.forEach((carac) => { %>
-                            <li> <%= carac.caracteristique %></li>
+                    <ul>
+                      <% partie.donnee.caracteristiques.forEach((carac) => { %>
+                        <li> <%= carac.caracteristique %></li>
                         <%  }); %>
                       </ul>
                       <p> <%= partie.donnee.nombreJoueur %> joueur(s)</p>
+                    </div>
+
+
+
+                  <div class="card">
+                    <h6 class="card-title"><%= partie.donnee.descriptionPartie%></h6>
+                    <a href="/partie/<%=partie.idPartie%>"><button type="button" class="btn btn-primary">Plus de détails</button></a>
                   </div>
+                  </div>
+                  </div>
+                  <%  });%>
+                  <!-- -->
+
+
+
+
               </div>
+            </div>
 
+            <!-- OBJECTIFS-->
 
-              <div class="card" style="width: 18rem;">
-                  <h6 class="card-title"><%= partie.donnee.descriptionPartie%></h6>
-                  <a href="/partie/<%=partie.idPartie%>"><button type="button" class="btn btn-primary">Plus de détails</button></a>
-              <%  });%>
-            <!-- -->
-            <div style="background-color:grey; border-radius: 12px; margin: 3px">
+            <div class="col-xl">
+              <div style="background-color:grey; border-radius: 12px; margin: 3px">
                 <h5>objectifs mensuels</h5>
                 <p>Jouer 5 partie</p>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">1/5</div>
+                  <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">1/5</div>
                 </div>
                 <p>Jouer 10h</p>
                 <div class="progress" style="background-color:grey; border-radius: 12px">
-                    <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">5/10</div>
+                  <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">5/10</div>
                 </div>
                 <button type="button" class="btn-progress">Obtenir recompenses</button>
-            </div>
-            <div style="background-color:grey; border-radius: 12px; margin: 3px">
+              </div>
+
+
+
+
+              <div style="background-color:grey; border-radius: 12px; margin: 3px">
 
                 <h5>Evenement en cours</h5>
 
                 <div class="text-zone">
-                    <a>Evenement 1</a>
-                    <a>Evenement 2</a>
+                  <a>Evenement 1</a>
+                  <a>Evenement 2</a>
                 </div>
 
-            </div>
-            <div style="background-color:grey; border-radius: 12px; margin: 3px">
+              </div>
+              <div style="background-color:grey; border-radius: 12px; margin: 3px">
                 <h5>prochaine evenements</h5>
 
 
                 <div class="text-zone">
-                    <p>date 1</p>
-                    <a>Evenement 3</a>
+                  <p>date 1</p>
+                  <a>Evenement 3</a>
                 </div>
                 <div class="text-zone">
-                    <p>date 2</p>
-                    <a>Evenement 4</a>
+                  <p>date 2</p>
+                  <a>Evenement 4</a>
                 </div>
+              </div>
+
             </div>
+
+
+          </div>
         </div>
-
-    </div>
-</div>
-</div>
-</div>
-
-</body>
-</html>
+      </body>
+      </html>
