--- a/views/recherche.ejs
+++ b/views/recherche.ejs
@@ -1,5 +1,22 @@
-<div class="modal-body">
-      <%- include('navbar.ejs'); %>
+<!DOCTYPE html>
+
+<html lang="fr" >
+    <head>
+    <meta charset="utf-8" />
+    <title>Acceuil</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
+    </head>
+    <body>
+
+
+    <div class="container">
+    <div class="row">
+        <%- include('navbar.ejs'); %>
+
+      <div class="col-xl">
     <form method="post" action="/recherche" autocomplete="on">
       <div class="mb-3">
         <label class="col-form-label">Mots clé de la recherche</label>
@@ -40,4 +57,8 @@
     </div>
     <input type="submit" class="btn btn-primary" name="submit" value="recherche">
     </form>
-  </div>
+    </div>
+    </div>
+    </div>
+</body>
+</html>
