--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -13,12 +13,12 @@
     </head>
 
     <body>
-        
+
     <div class="main">
     <div class="container">
         <div class="row">
                 <%- include('navbar.ejs'); %>
-                
+
 
             <div class="col-xl">
                 <nav class="navbar">
@@ -72,7 +72,7 @@
 
 
             let xhr = new XMLHttpRequest();
-            xhr.open('GET', 'search/contact/'+pseudoInput,false);
+            xhr.open('GET', '/search/contact/'+pseudoInput,false);
             xhr.onload = function() {
                 if (xhr.status !=200){
                     alert('L\'utilisateur recherché n\'existe pas');
