--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -43,7 +43,7 @@
                     </div>
 
                     <div class="row align-items-center bg-secondary">
-                        <h5>preference de jeu</h5>
+                        <h5>Préférences de jeu</h5>
                         <div class="col">
                             <div>
                                 <p>Niveu de jeu</p>
@@ -56,7 +56,7 @@
                                 </ul>
                             </div>
                             <div>
-                                <p>Genre</p>
+                                <p><b>Genre</b></p>
                                 <ul>
 
                                     <% preference[1].forEach((element) =>{ %>
