--- a/views/resultat.ejs
+++ b/views/resultat.ejs
@@ -10,8 +10,12 @@
     <link rel="stylesheet" type="text/css" href="../style.css">
     </head>
     <body>
-        <%- include('navbar.ejs'); %>
-        <div>
+
+        <div class="container">
+          <div class="row">
+            <%- include('navbar.ejs'); %>
+
+            <div class="col-xl">
             <h5>Resultat de la recherche</h5>
 
             <div>
@@ -59,7 +63,8 @@
                         <%  });%>
 
             </div>
-
+          </div>
+          </div>
         </div>
     </div>
 </div>
