--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,4 +1,4 @@
-<div class="col-md-1"> 
+<div class="col-md-1">
 <nav id="nav" class="navbar is-dark" role="navigation" aria-label="main navigation">
 
     <%
@@ -10,7 +10,7 @@
             <!-- lien-->
             <img src="../velasquez-philippe-iv-1628.jpg" width="112" height="100">
         </a>
-        <p><%= session.idUser %> </p>
+        <p><%= session.pseudo %> </p>
         <p>Aventurier débutant</p>
 
     </div>
@@ -47,7 +47,7 @@
             <%
             if (session.connected) { %>
             <li class="nav-item">
-                <a class="nav-link btn-disagree" href="/disconnect">Deconnection</a>
+                <a class="nav-link btn-disagree" href="/disconnect">Déconnexion</a>
             </li>
             <%  } %>
         </ul>
