nettoyage du répertoire

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -8,7 +8,7 @@
     <div class="navbar-brand">
         <a class="navbar-item" href="/profil">
             <!-- lien-->
-            <img src="../velasquez-philippe-iv-1628.jpg" width="112" height="100">
+            <img src="images/velasquez-philippe-iv-1628.jpg" width="112" height="100">
         </a>
         <p><%= session.pseudo %> </p>
         <p>Aventurier débutant</p>
