--- a/views/acceuil.ejs
+++ b/views/acceuil.ejs
@@ -4,7 +4,7 @@
 <html lang="fr" >
     <head>
     <meta charset="utf-8" />
-    <title>Acceuil</title>
+    <title>Accueil</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
