--- a/views/edition_profil.ejs
+++ b/views/edition_profil.ejs
@@ -52,39 +52,37 @@
                             <div>
                                 <div class="form-check">
                                     <p>Systeme</p>
-                                    <input type="checkbox" name="systeme" id = "fantasy"value="">
+                                    <input type="checkbox" name="valeurs" id = "fantasy"value="7">
                                     <label class="form-ckeck-label" for="fantasy">D&D 5e </label>
-                                    <input type="checkbox" name="systeme" id="Sci-fi"value="">
-                                    <label class="form-ckeck-label" for="Sci-fi">Cyberpunk </label>
-                                    <input type="checkbox" name="systeme" id="CyberPunk"value="">
-                                    <label class="form-ckeck-label" for="CyberPunk">Personalisé</label>
+                                    <input type="checkbox" name="valeurs" id="Sci-fi"value="8">
+                                    <label class="form-ckeck-label" for="Sci-fi">l'appelle de chtulu </label>
                                 </div>
 
                                 <div class="form-check">
                                     <p>genre</p>
-                                    <input type="checkbox" name="genre" id = "fantasy"value="">
+                                    <input type="checkbox" name="valeurs" id = "fantasy"value="5">
                                     <label class="form-ckeck-label" for="fantasy">fantasy </label>
-                                    <input type="checkbox" name="genre" id="Sci-fi"value="">
-                                    <label class="form-ckeck-label" for="Sci-fi">Sci-fi </label>
-                                    <input type="checkbox" name="genre" id="CyberPunk"value="">
+                                    <input type="checkbox" name="valeurs" id="Sci-fi"value="6">
+                                    <label class="form-ckeck-label" for="Sci-fi">Post-apo </label>
+                                    <input type="checkbox" name="valeurs" id="CyberPunk"value="4">
                                     <label class="form-ckeck-label" for="CyberPunk">"CyberPunk</label>
                                 </div>
                             </div>
                             <div>
                                 <div class="form-check">
                                     <p>niveau</p>
-                                    <input type="checkbox" name="niveau" id = "fantasy"value="novice">
-                                    <label class="form-ckeck-label" for="fantasy">debutant </label>
-                                    <input type="checkbox" name="niveau" id="Sci-fi"value="moyenne">
-                                    <label class="form-ckeck-label" for="Sci-fi">moyenne</label>
-                                    <input type="checkbox" name="niveau" id="CyberPunk"value="complexe">
+                                    <input type="checkbox" name="valeurs" id = "fantasy"value="1">
+                                    <label class="form-ckeck-label" for="fantasy">Novice</label>
+                                    <input type="checkbox" name="valeurs" id="Sci-fi"value="2">
+                                    <label class="form-ckeck-label" for="Sci-fi">Moyenne</label>
+                                    <input type="checkbox" name="valeurs" id="CyberPunk"value="3">
                                     <label class="form-ckeck-label" for="CyberPunk">"Complexe</label>
                                 </div>
                                 <div class="form-check">
                                     <p>Meta</p>
-                                    <input type="checkbox" name="meta1" id = "fantasy"value="">
+                                    <input type="checkbox" name="valeurs" id = "fantasy"value="9">
                                     <label class="form-ckeck-label" for="fantasy">accepte les Joueurs nouveau </label>
-                                    <input type="checkbox" name="meta2" id="Sci-fi"value="">
+                                    <input type="checkbox" name="valeurs" id="Sci-fi"value="10">
                                     <label class="form-ckeck-label" for="Sci-fi">Partie serieux</label>
                                 </div>
                             </div>
