--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -45,8 +45,8 @@
                     <div class="row align-items-center bg-secondary">
                         <h5>preference de jeu <a href="/edit" <i class="bi bi-pencil-square"></i></h5></a>
                         <div class="col">
-                            <div>
-                                <p>Niveu de jeu</p>
+                            <div class="pref">
+                                <p><b>Niveu de jeu</b></p>
                                 <ul>
 
                                     <% 
@@ -56,7 +56,7 @@
 
                                 </ul>
                             </div>
-                            <div>
+                            <div class="pref">
                                 <p><b>Genre</b></p>
                                 <ul>
 
@@ -68,8 +68,8 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div>
-                                <p>Systeme de preference</p>
+                            <div class="pref">
+                                <p><b>Systeme de preferenc</b>e</p>
                                 <ul>
 
                                     <% preference[2].forEach((element) =>{ %>
@@ -78,8 +78,8 @@
 
                                 </ul>
                             </div>
-                            <div>
-                                <p>Meta</p>
+                            <div class="pref">
+                                <p><b>Meta</b></p>
                                 <ul>
 
                                     <% preference[3].forEach((element) =>{ %>
