--- a/views/edition_profil.ejs
+++ b/views/edition_profil.ejs
@@ -1,96 +1,104 @@
 <!DOCTYPE html>
 
-<html lang="fr" >
-    <head>
+<html lang="fr">
+
+<head>
     <meta charset="utf-8" />
     <title>Profil</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="../style.css">
 
-    </head>
-    <body>
-        <!--Navbar lien-->
-          <%- include('navbar.ejs'); %>
+</head>
 
-        <!-- Acceuil-->
-        <div>
+<body>
+    <!--Navbar lien-->
 
-            <!-- Navbar Profil/Contact-->
-            <nav class="navbar">
-                <div class="navbar-nav">
-                    <a class="nav-link" aria-current="page" href="/profile" style="color: yellow">Profil</a>
-                    <a class="nav-link" href="contact.ejs" style="color: yellow">Contact</a>
-                </div>
-            </nav>
 
-            <!-- Card profil-->
-            <div>
-                <form action="profil.php">
-                    <h5>Nom utilisateur</h5>
-                    <p>gaspard</p>
+    <!-- Acceuil-->
+    <div class="container">
+        <div class="row">
+            <%- include('navbar.ejs'); %>
+                <!-- Navbar Profil/Contact-->
+                <div class="col-xl">
+                    <nav class="navbar navbar-expand ">
+                        <div class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <a class="nav-link bg-secondary" aria-current="page" href="#">Profil</a>
+                            <a class="nav-link bg-secondary" href="/contacts">Contacts</a>
+                        </div>
+                    </nav>
 
-                    <h5>Pays</h5>
-                    <p>france</p>
+                    <!-- Card profil-->
+                    <div class="card">
+                        <form action="profil.php">
+                            <h5>Nom utilisateur</h5>
+                            <p>gaspard</p>
 
-                    <h5>Fuseau horaire</h5>
-                    <p>GTM + 1</p>
+                            <h5>Pays</h5>
+                            <p>france</p>
 
-                    <h5>Description</h5>
-                    <p style="background-color: white; border-radius: 12px; width: 50%">un juour qui a tu les jeux fpezkf^pzkef^pzkef^pzkef^pkezf^pkzefpkzf^pz</p>
+                            <h5>Fuseau horaire</h5>
+                            <p>GTM + 1</p>
 
-                    <input type="submit" class="btn-agree" name="submit" value="Enregistrer les parametre">
-                </form>
-            </div>
+                            <h5>Description</h5>
+                            <p style="background-color: white; border-radius: 12px; width: 50%">un juour qui a tu les
+                                jeux fpezkf^pzkef^pzkef^pzkef^pkezf^pkzefpkzf^pz</p>
 
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-1">
+                            <input type="submit" class="btn-agree" name="submit" value="Enregistrer les parametre">
+                        </form>
+                    </div>
+
+                    <div class="card">
                         <form action="/editionprofile" method="post">
                             <h5>preference de jeu</h5>
                             <div>
                                 <div class="form-check">
                                     <p>Systeme</p>
-                                    <input type="checkbox" name="valeurs" id = "fantasy"value="7">
+                                    <input type="checkbox" name="valeurs" id="fantasy" value="7">
                                     <label class="form-ckeck-label" for="fantasy">D&D 5e </label>
-                                    <input type="checkbox" name="valeurs" id="Sci-fi"value="8">
+                                    <input type="checkbox" name="valeurs" id="Sci-fi" value="8">
                                     <label class="form-ckeck-label" for="Sci-fi">l'appelle de chtulu </label>
                                 </div>
 
                                 <div class="form-check">
                                     <p>genre</p>
-                                    <input type="checkbox" name="valeurs" id = "fantasy"value="5">
+                                    <input type="checkbox" name="valeurs" id="fantasy" value="5">
                                     <label class="form-ckeck-label" for="fantasy">fantasy </label>
-                                    <input type="checkbox" name="valeurs" id="Sci-fi"value="6">
+                                    <input type="checkbox" name="valeurs" id="Sci-fi" value="6">
                                     <label class="form-ckeck-label" for="Sci-fi">Post-apo </label>
-                                    <input type="checkbox" name="valeurs" id="CyberPunk"value="4">
+                                    <input type="checkbox" name="valeurs" id="CyberPunk" value="4">
                                     <label class="form-ckeck-label" for="CyberPunk">"CyberPunk</label>
                                 </div>
                             </div>
                             <div>
                                 <div class="form-check">
                                     <p>niveau</p>
-                                    <input type="checkbox" name="valeurs" id = "fantasy"value="1">
+                                    <input type="checkbox" name="valeurs" id="fantasy" value="1">
                                     <label class="form-ckeck-label" for="fantasy">Novice</label>
-                                    <input type="checkbox" name="valeurs" id="Sci-fi"value="2">
+                                    <input type="checkbox" name="valeurs" id="Sci-fi" value="2">
                                     <label class="form-ckeck-label" for="Sci-fi">Moyenne</label>
-                                    <input type="checkbox" name="valeurs" id="CyberPunk"value="3">
+                                    <input type="checkbox" name="valeurs" id="CyberPunk" value="3">
                                     <label class="form-ckeck-label" for="CyberPunk">"Complexe</label>
                                 </div>
                                 <div class="form-check">
                                     <p>Meta</p>
-                                    <input type="checkbox" name="valeurs" id = "fantasy"value="9">
+                                    <input type="checkbox" name="valeurs" id="fantasy" value="9">
                                     <label class="form-ckeck-label" for="fantasy">accepte les Joueurs nouveau </label>
-                                    <input type="checkbox" name="valeurs" id="Sci-fi"value="10">
+                                    <input type="checkbox" name="valeurs" id="Sci-fi" value="10">
                                     <label class="form-ckeck-label" for="Sci-fi">Partie serieux</label>
                                 </div>
                             </div>
 
-                            <input type="submit" class="btn btn-primary" name="submit" value="Enregistrer les preferences">
+                            <input type="submit" class="btn btn-primary" name="submit"
+                                value="Enregistrer les preferences">
                         </form>
+
                     </div>
                 </div>
-            </div>
-     </body>
+        </div>
+    </div>
+</body>
+
 </html>
